tried to incorporate Devon's changes - missing bolding, fixing gap, footer, and submit button

--- a/style/index.css
+++ b/style/index.css
@@ -26,6 +26,13 @@ button {
   margin: 0vw;
   width: 10vw;
   margin-top: 2vw;
+  display: block; 
+}
+.buttoncontainer {
+  justify-content: center;
+  align-items: center;
+  display: flex; 
+  
 }
 /*change display when hovering*/
 button:hover {
@@ -41,6 +48,9 @@ button:hover {
   border-bottom: 5px double #a4c3b2;
   padding-bottom: 2vw;
   margin-bottom: 2vw;
+}
+.bold {
+  font-weight: bold;
 }
 
 /*-----------------HEADER---------------------*/
@@ -127,7 +137,7 @@ button:hover {
 /*grid to hold two columns*/
 #home {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: minmax(1fr, auto);
   grid-gap: 4em;
 }
@@ -142,18 +152,16 @@ button:hover {
 
 /*right side w/ 3 blog posts, 2 other posts*/
 #home .container2 {
-  grid-column: 2;
+  grid-column: 1;
   display: flexbox;
   flex-direction: column;
   padding: 2px;
-  padding-top: 72px;
   text: 1em;
 }
 
 #learn-more {
   display: grid;
-  grid-row: 1;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr minmax(5em, auto);
   grid-gap: 4em;
 }
@@ -161,7 +169,7 @@ button:hover {
 /*left side more in depth text*/
 #learn-more .container2 {
   grid-column: 1;
-  grid-row: 1;
+  grid-row: 2;
   display: flex;
   flex-direction: column;
   padding: 80px 2px 2px 2px;
@@ -169,7 +177,7 @@ button:hover {
 
 /*right side w/ 3 blog posts, 2 other posts*/
 #learn-more .container1 {
-  grid-column: 2;
+  grid-column: 1;
   display: flexbox;
   flex-direction: column;
   padding: 2px;
@@ -335,6 +343,56 @@ a h1:hover {
   .margin {
     margin-left: 15vw;
     margin-right: 15vw;
+  }
+  #home {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: minmax(1fr, auto);
+    grid-gap: 4em;
+  }
+  
+  /*left side more in depth text*/
+  #home .container1 {
+    grid-column: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 2px;
+  }
+  
+  /*right side w/ 3 blog posts, 2 other posts*/
+  #home .container2 {
+    grid-column: 2;
+    display: flexbox;
+    flex-direction: column;
+    padding: 2px;
+    padding-top: 72px;
+    text: 1em;
+  }
+  
+  #learn-more {
+    display: grid;
+    grid-row: 1;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr minmax(5em, auto);
+    grid-gap: 4em;
+  }
+  
+  /*left side more in depth text*/
+  #learn-more .container2 {
+    grid-column: 1;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 80px 2px 2px 2px;
+  }
+  
+  /*right side w/ 3 blog posts, 2 other posts*/
+  #learn-more .container1 {
+    grid-column: 2;
+    display: flexbox;
+    flex-direction: column;
+    padding: 2px;
+    text: 1em;
   }
 
   #footer {
